small fixes after code review